[package]
name = "ktest-macros"
version = "0.1.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Procedural macros for the ktest testing framework"
license = "MIT"
repository = "https://github.com/philogroves/ktest_macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = {version = "2.0.104", features = ["extra-traits", "full"]}